Place html components in the desired area

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <div class="header">
             <input type="search">
             <span class="name">Morgan Oakley</span>
-            <span class="greeting">Hi there,</span>
-            <span class="name user-name">Morgan Oakley (@morgan)</span>
+            <div class="greetings">
+                <span>Hi there,</span>
+                <span class="user-name">Morgan Oakley (@morgan)</span>    
+            </div>
             <div class="head-menu">
                 <ul>
                     <li class="head-menu-item">New</li>
@@ -22,7 +24,7 @@
             </div>
         </div>
 
-        <div class="siderbar">
+        <div class="sidebar">
             <h1>Dashboard</h1>
 
             <div class="side-menu1">
@@ -48,82 +50,89 @@
             <div class="projects">
                 <h2 class="main-head">Your Projects</h2>
 
-                <article class="project-item">
-                    <h3 class="main-sub-head">Super Cool Project</h3>
-                    <p class="main-para">Lorem ipsum dolor sit amet.
-                    Quasi sapiente perspiciatis eum voluptatem.
-                    Suscipit iure ipsam tempora amet.</p>
-                </article>
-                <article class="project-item">
-                    <h3 class="main-sub-head">Less Cool Project</h3>
-                    <p class="main-para">Lorem ipsum dolor sit amet.
-                    Repellendus porro at consequuntur consectetur?
-                    Eius ut similique iusto voluptatem.</p>
-                </article>
-                <article class="project-item">
-                    <h3 class="main-sub-head">Impossible App</h3>
-                    <p class="main-para">Lorem ipsum dolor sit amet.
-                    Voluptatibus sequi eaque perspiciatis similique.
-                    Delectus voluptatum praesentium veniam? Quod?</p>
-                </article>
-                <article class="project-item">
-                    <h3 class="main-sub-head">Easy Peasy App</h3>
-                    <p class="main-para">Lorem ipsum dolor sit amet.
-                    Beatae recusandae ducimus quibusdam doloribus.
-                    Harum dicta at assumenda alias.</p>
-                </article>
-                <article class="project-item">
-                    <h3 class="main-sub-head">Ad Blocker</h3>
-                    <p class="main-para">Lorem ipsum dolor sit amet.
-                    Mollitia corrupti quidem numquam ut!
-                    Amet deserunt laborum quia delectus.</p>
-                </article>
-                <article class="project-item">
-                    <h3 class="main-sub-head">Money Maker</h3>
-                    <p class="main-para">Lorem ipsum dolor sit amet.
-                    Ipsum iste nemo aliquam a!
-                    Minima laboriosam modi quae mollitia?</p>
-                </article>
+                <div class="project-items">
+                    <article class="project-item">
+                        <h3 class="main-sub-head">Super Cool Project</h3>
+                        <p class="main-para">Lorem ipsum dolor sit amet.
+                        Quasi sapiente perspiciatis eum voluptatem.
+                        Suscipit iure ipsam tempora amet.</p>
+                    </article>
+                    <article class="project-item">
+                        <h3 class="main-sub-head">Less Cool Project</h3>
+                        <p class="main-para">Lorem ipsum dolor sit amet.
+                        Repellendus porro at consequuntur consectetur?
+                        Eius ut similique iusto voluptatem.</p>
+                    </article>
+                    <article class="project-item">
+                        <h3 class="main-sub-head">Impossible App</h3>
+                        <p class="main-para">Lorem ipsum dolor sit amet.
+                        Voluptatibus sequi eaque perspiciatis similique.
+                        Delectus voluptatum praesentium veniam? Quod?</p>
+                    </article>
+                    <article class="project-item">
+                        <h3 class="main-sub-head">Easy Peasy App</h3>
+                        <p class="main-para">Lorem ipsum dolor sit amet.
+                        Beatae recusandae ducimus quibusdam doloribus.
+                        Harum dicta at assumenda alias.</p>
+                    </article>
+                    <article class="project-item">
+                        <h3 class="main-sub-head">Ad Blocker</h3>
+                        <p class="main-para">Lorem ipsum dolor sit amet.
+                        Mollitia corrupti quidem numquam ut!
+                        Amet deserunt laborum quia delectus.</p>
+                    </article>
+                    <article class="project-item">
+                        <h3 class="main-sub-head">Money Maker</h3>
+                        <p class="main-para">Lorem ipsum dolor sit amet.
+                        Ipsum iste nemo aliquam a!
+                        Minima laboriosam modi quae mollitia?</p>
+                    </article>
+                </div>
             </div>
 
             <div class="announcements">
                 <h2 class="main-head">Announcements</h2>
-                <article class="ann-item">
-                    <h3 class="main-sub-head">Site Maintenance</h3>
-                    <p class="main-para">Lorem ipsum dolor sit amet.
-                    Repellendus porro at consequuntur consectetur?
-                    Eius ut similique iusto voluptatem.</p>
-                </article>
-                <article class="ann-item">
-                    <h3 class="main-sub-head">Community Share Day</h3>
-                    <p class="main-para">Lorem ipsum dolor sit amet.
-                    Repellat, fugiat? Voluptatibus, aut dolores?
-                    Eveniet ullam perferendis tenetur et!</p>
-                </article>
-                <article class="ann-item">
-                    <h3 class="main-sub-head">Updated Privacy Policy</h3>
-                    <p class="main-para">Lorem ipsum dolor sit amet.
-                    Omnis, hic? Velit, incidunt illum.
-                    Dolorem reprehenderit eveniet soluta libero!</p>
-                </article>
+                <div class="ann-items">
+                    <article class="ann-item">
+                        <h3 class="main-sub-head">Site Maintenance</h3>
+                        <p class="main-para">Lorem ipsum dolor sit amet.
+                        Repellendus porro at consequuntur consectetur?
+                        Eius ut similique iusto voluptatem.</p>
+                    </article>
+                    <article class="ann-item">
+                        <h3 class="main-sub-head">Community Share Day</h3>
+                        <p class="main-para">Lorem ipsum dolor sit amet.
+                        Repellat, fugiat? Voluptatibus, aut dolores?
+                        Eveniet ullam perferendis tenetur et!</p>
+                    </article>
+                    <article class="ann-item">
+                        <h3 class="main-sub-head">Updated Privacy Policy</h3>
+                        <p class="main-para">Lorem ipsum dolor sit amet.
+                        Omnis, hic? Velit, incidunt illum.
+                        Dolorem reprehenderit eveniet soluta libero!</p>
+                    </article>
+                </div>
             </div>
 
             <div class="trending">
-                <div class="trend-item">
-                    <h4>@tegan</h4>
-                    <span>World Peace Builder</span>
-                </div>
-                <div class="trend-item">
-                    <h4>@morgan</h4>
-                    <span>Super Cool Project</span>
-                </div>
-                <div class="trend-item">
-                    <h4>@kendall</h4>
-                    <span>Life Changing App</span>
-                </div>
-                <div class="trend-item">
-                    <h4>@alex</h4>
-                    <span>No Traffic Maker</span>
+                <h2 class="main-head">Trending</h2>
+                <div class="trend-items">
+                    <div class="trend-item">
+                        <h4>@tegan</h4>
+                        <span>World Peace Builder</span>
+                    </div>
+                    <div class="trend-item">
+                        <h4>@morgan</h4>
+                        <span>Super Cool Project</span>
+                    </div>
+                    <div class="trend-item">
+                        <h4>@kendall</h4>
+                        <span>Life Changing App</span>
+                    </div>
+                    <div class="trend-item">
+                        <h4>@alex</h4>
+                        <span>No Traffic Maker</span>
+                    </div>
                 </div>
             </div>
         </div>
